# GymBro

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
backend/: check_db.ts  db.ts  index.ts  migrate.ts  package-lock.json  package.json  schema.sql  test_delete_goal.ts  tsconfig.json
backend/middleware/: auth.ts
backend/routes/: auth.ts  foods.ts  measurements.ts  sessions.ts
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: .gitignore  App.tsx  styles.css  types.ts
frontend/src/components/: AboutModal.tsx  AttendanceHeatmap.tsx  ContactModal.tsx  GainsPanel.tsx  Login.tsx  NutritionTracker.tsx  Orb.tsx  ProfilePanel.tsx  RestTimer.tsx  SessionForm.tsx  SessionHistory.tsx
frontend/src/hooks/: useLocalStore.ts
src/: styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: GainsPanel.tsx  MusicPlayer.tsx  NutritionTracker.tsx
src/hooks/: useLocalStore.ts
